写了两个事件